Fix broken CSS because of bootstrap.

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -181,16 +181,20 @@
 .lt-contact-text-input {
   display: block;
   width: 263px; height: 30px;
+  font-size: 13px;
   border: 1px solid @purple56;
   border-radius: 4px;
+  color: black;
 }
 .lt-contact-msg {
   margin: 40px 0 0 0;
 }
 .lt-contact-textarea {
   width: 974px; height: 112px;
+  font-size: 13px;
   border: 1px solid @purple56;
   border-radius: 4px;
+  color: black;
 }
 @submitWidth: 281px;
 @submitHeight: 56px;
